--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,16 @@
     <h1 class="site-title">
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
-    <p class="site-subtitle fst-italic mb-0">{{ site.tagline }}</p>
+    <p class="site-subtitle fst-italic mb-0"></p>
+    <script>
+      import Typed from 'typed.js';
+      var typed = new Typed('.site-subtitle.fst-italic.mb-0', {
+        strings: [ site.tagline_1, site.tagline_2, site.tagline_3 ],
+        typeSpeed: 60,
+        backSpeed: 60,
+        loop: true
+      });
+    </script>
   </header>
   <!-- .profile-wrapper -->
 
