--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,12 +21,13 @@
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
     <p class="site-subtitle fst-italic mb-0"></p>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
-      import Typed from 'typed.js';
       var typed = new Typed('.site-subtitle.fst-italic.mb-0', {
         strings: [ site.tagline_1, site.tagline_2, site.tagline_3 ],
         typeSpeed: 60,
         backSpeed: 60,
+        fadeOut: true,
         loop: true
       });
     </script>
