--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,10 +20,10 @@
     <h1 class="site-title">
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
-    <p class="site-subtitle fst-italic mb-0"></p>
+    <span id="typed" class="site-subtitle fst-italic mb-0"></span>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
-      var typed = new Typed('.site-subtitle.fst-italic.mb-0', {
+      var typed = new Typed('#typed', {
         strings: [ site.tagline_1, site.tagline_2, site.tagline_3 ],
         typeSpeed: 60,
         backSpeed: 60,
