[master] Update sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,9 +20,9 @@
     <h1 class="site-title">
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
-    <p><span id="typed" class="site-subtitle fst-italic mb-0"></span></p>
+    <p id="typed" class="site-subtitle fst-italic mb-0"></p>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" class="site-subtitle fst-italic mb-0">
       var typed = new Typed('#typed', {
         strings: [ site.tagline_1, site.tagline_2, site.tagline_3 ],
         typeSpeed: 60,
