[master] Update sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="text/javascript" class="site-subtitle fst-italic mb-0">
       var typed = new Typed('#typed', {
-        strings: [ {{ site.tagline_1 }}, {{ site.tagline_2 }}, {{ site.tagline_3 }} ],
+        strings: [ '{{ site.tagline_1 }}', '{{ site.tagline_2 }}', '{{ site.tagline_3 }}' ],
         typeSpeed: 60,
         backSpeed: 60,
         fadeOut: true,
