[master] Update sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
         strings: [ '{{ site.tagline_1 }}', '{{ site.tagline_2 }}', '{{ site.tagline_3 }}' ],
         typeSpeed: 60,
         backSpeed: 60,
-        fadeOut: true,
+        showCursor: false,
         loop: true
       });
     </script>
