--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
     <h1 class="site-title">
       <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
     </h1>
-    <p id="typed" class="site-subtitle fst-italic mb-0"></p>
+    <span id="typed" class="site-subtitle fst-italic mb-0"></span>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="text/javascript" class="site-subtitle fst-italic mb-0">
       var typed = new Typed('#typed', {
