[master] Add some features
Add cursor effect, music player (aplayer) at about tab,...

--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -104,3 +104,13 @@
     {% include google-analytics.html %}
   {% endif %}
 {% endif %}
+
+<!-- Plugins -->
+
+<!-- Cursor -->
+<script defer src="/assets/js/plugin/fireWorks.js"></script>
+
+<!-- Music Player -->
+<link rel="stylesheet" href="/assets/css/APlayer.min.css" media="print" onload="this.media='all'">
+<script src="/assets/js/plugin/APlayer.min.js"></script>
+<script src="/assets/js/plugin/Meting.min.js"></script>
