[master] Update js-selector.html

--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -108,7 +108,7 @@
 <!-- Plugins -->
 
 <!-- Cursor -->
-<script defer src="/assets/js/plugin/fireWorks.js"></script>
+<script src="/assets/js/plugin/fireWorks.js"></script>
 
 <!-- Music Player -->
 <link rel="stylesheet" href="/assets/css/APlayer.min.css" media="print" onload="this.media='all'">
